--- a/templates/register.html
+++ b/templates/register.html
@@ -8,10 +8,27 @@
             color: white;
             text-align: center;
         }
+        ::placeholder{
+            color: black;
+            opacity: 0.8;
+        }
+        #gogogo{
+            border: none;
+            width: 85px;
+            height: 40px;
+            border-radius: 20px;
+        }
     </style>
 </head>
 <body>
-    <h1>
-        Register for GianBank
-    </h1>
+    <h1>Register For GianBank!</h1>
+    <form>
+        <label for="userr">Username:</label>
+        <input id="userr" name="userr" placeholder="I_isCool">
+        <label for="passs">Password:</label>
+        <input id="passs" name="passs" placeholder="Dogs_Rock123:)">
+        <label for="cash">Funding:</label>
+        <input id="cash" name="cash" placeholder="10000.00">
+        <button id="gogogo">Creat Gianbank Account</button>
+    </form>
 </body>
