--- a/templates/register.html
+++ b/templates/register.html
@@ -9,14 +9,16 @@
             text-align: center;
         }
         ::placeholder{
-            color: black;
-            opacity: 0.8;
+            color: lightgray;
+            opacity: 1;
         }
         #gogogo{
             border: none;
-            width: 85px;
-            height: 40px;
-            border-radius: 20px;
+            width: 100px;
+            height: 60px;
+            border-radius: 30px;
+            background-color: black;
+            color: white;
         }
     </style>
 </head>
@@ -32,6 +34,12 @@
         <label for="cash">Funding:</label>
         <input id="cash" name="cash" placeholder="10000.00">
         <br><br>
-        <button id="gogogo">Creat Gianbank Account</button>
+        <button id="gogogo">Create Gianbank Account</button>
     </form>
+    <h1>Disclaimer</h1>
+    <p>
+        There is no real money involved. please type any decimal number like "123.33" into the funding option. THIS WONT DEDUCT ANY REAL MONEY FROM YOUR ACCOUNT.
+        <br><br>
+        For more information, feel free to visit the main page, gianbank.tk for a full disclamer.
+    </p>
 </body>
