--- a/templates/register.html
+++ b/templates/register.html
@@ -20,25 +20,33 @@
             background-color: black;
             color: white;
         }
+        #top{
+            border: solid white 2px;
+            padding: 15px;
+            margin: 15px;
+            border-radius: 10px;
+        }
     </style>
 </head>
 <body>
-    <h1>Register For GianBank!</h1>
-    <form>
-        <label for="userr">Username:</label>
-        <input id="userr" name="userr" placeholder="I_isCool">
-        <br><br>
-        <label for="passs">Password:</label>
-        <input id="passs" name="passs" placeholder="Dogs_Rock123:)">
-        <br><br>
-        <label for="cash">Funding:</label>
-        <input id="cash" name="cash" placeholder="10000.00">
-        <br><br>
-        <button id="gogogo">Create Gianbank Account</button>
-    </form>
+    <div id="top">
+        <h1>Register For GianBank!</h1>
+        <form>
+            <label for="userr">Username:</label>
+            <input id="userr" name="userr" placeholder="I_isCool">
+            <br><br>
+            <label for="passs">Password:</label>
+            <input id="passs" name="passs" placeholder="Dogs_Rock123:)">
+            <br><br>
+            <label for="cash">Funding:</label>
+            <input id="cash" name="cash" placeholder="10000.00">
+            <br><br>
+            <button id="gogogo">Create Gianbank Account</button>
+        </form>
+    </div>
     <h1>Disclaimer</h1>
     <p>
-        There is no real money involved. please type any decimal number like "123.33" into the funding option. THIS WONT DEDUCT ANY REAL MONEY FROM YOUR ACCOUNT.
+        There is no real money involved. please type any decimal number like "123.33" into the funding option. THIS WONT DEDUCT ANY REAL MONEY FROM YOUR REAL BANK ACCOUNT OR ANYWHERE YOU STORE MONEY.
         <br><br>
         For more information, feel free to visit the main page, gianbank.tk for a full disclamer.
     </p>
