updated register func

--- a/templates/register.html
+++ b/templates/register.html
@@ -39,7 +39,7 @@
 <body>
     <div id="top">
         <h1>Register For GianBank!</h1>
-        <form>
+        <form method="POST">
             <label for="userr">Username:</label>
             <input id="userr" name="userr" placeholder="I_isCool">
             <br><br>
