--- a/templates/register.html
+++ b/templates/register.html
@@ -50,6 +50,7 @@
             <input id="cash" name="cash" placeholder="10000.00">
             <br><br>
             <button id="gogogo">Create Gianbank Account</button>
+            {{ err_msg|safe }}
         </form>
     </div>
     <h1>Disclaimer</h1>
