--- a/templates/index.html
+++ b/templates/index.html
@@ -50,7 +50,7 @@
                 <button class="go" type="submit" value="register" name="action">Register</button>
             </form>
         </div>
-        {{er}}
+        {{er|safe}}
     </div>
     <div class="two">
         <h1>Gianbank prefered trading plus</h1>
